--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 dist: trusty # Ubuntu 14.04
 sudo: reuired
-before_instasll
+before_install:
  - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-latex-recommended texlive-latex-extra
 script:
   - mkdir build
