--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ before_install:
  - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-latex-recommended texlive-latex-extra
 script:
   - mkdir build
-  - pdflatex -interaction=nonstopmode -halt-on-error -output-directory build index.tex
-  && (bibtex build/index || true)
-  && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build index.tex
+  - pdflatex -interaction=nonstopmode -halt-on-error -output-directory build index.tex \
+  && (bibtex build/index || true) \
+  && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build index.tex \
   && pdflatex -interaction=nonstopmode -halt-on-error -output-directory build index.tex
 
 after_success:
